# supercollider

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  DEVELOPING.md  Guardfile  README_JAILBROKEN_IPHONE.md  README_MACOS.md  README_WINDOWS.md  sclang_conf_test.yaml.in  scratch  travis_test_run_proto.json
.travis/: before-install-linux.sh  before-install-osx.sh  before-script-osx.sh  qpm-prep.sh  qpm-test.sh  run-sc-class-library-test-suite.sh  script-linux.sh  script-osx.sh  test.sh
HelpSource/: Browse.html  Browse.html.in  OldHelpWrapper.html  Search.html  editor.js  lang-sc.js  scdoc.css  scdoc.js  search.js
QtCollider/: CMakeLists.txt  Common.cpp  Common.h  LanguageClient.cpp  LanguageClient.h  QObjectProxy.cpp  QObjectProxy.h  QWidgetProxy.cpp  QWidgetProxy.h  QcApplication.cpp  QcApplication.h  QcHelper.h  QcObjectFactory.cpp  QcObjectFactory.h  QcSignalSpy.h  QcWidgetFactory.h  QtCollider.h  QtDownload.cpp  QtDownload.h  debug.cpp  debug.h  factories.cpp  image.h  interface.cpp  metatype.cpp  metatype.hpp  painting.h  safeptr.hpp  type_codec.cpp  type_codec.hpp
SCDoc/: CMakeLists.txt  SCDoc.cpp  SCDoc.l  SCDoc.tab.cpp  SCDoc.tab.hpp  SCDoc.y  SCDocPrim.cpp  lex.scdoc.cpp  main.cpp
cmake_modules/: FindSndfile.cmake  MacAppFolder.cmake  SC_CPackProjectConfig.cmake  SC_QtConfig.cmake  launch-c.in  launch-cxx.in
common/: MsgFifo.h  SC_AllocPool.cpp  SC_AllocPool.h  SC_Apple.hpp  (+38 more)
editors/: CMakeLists.txt
editors/sc-ide/: CMakeLists.txt
editors/sc-ide/core/: app_palette.cpp  doc_manager.cpp  doc_manager.hpp  main.cpp  main.hpp  sc_introspection.cpp  sc_introspection.hpp  sc_lexer.cpp  sc_lexer.hpp  sc_process.cpp  sc_process.hpp  sc_server.cpp  sc_server.hpp  session_manager.cpp  session_manager.hpp  sig_mux.cpp  sig_mux.hpp
editors/sc-ide/core/settings/: default_themes.cpp  manager.cpp  manager.hpp  serialization.cpp  serialization.hpp  theme.cpp  theme.hpp
editors/sc-ide/core/util/: color.cpp  color.hpp  overriding_action.hpp  standard_dirs.cpp
editors/sc-ide/forms/: settings_editor.ui  settings_general.ui
editors/sc-ide/primitives/: localsocket_utils.cpp  localsocket_utils.hpp  sc_ipc_client.cpp  sc_ipc_client.hpp
editors/sc-ide/translations/: scide_zh.ts
editors/sc-ide/widgets/: audio_status_box.cpp  cmd_line.cpp  cmd_line.hpp  doc_list.cpp  doc_list.hpp  documents_dialog.cpp  documents_dialog.hpp  editor_box.cpp  editor_box.hpp  find_replace_tool.cpp  find_replace_tool.hpp  goto_line_tool.hpp  help_browser.cpp  help_browser.hpp  lang_status_box.cpp  lookup_dialog.cpp  lookup_dialog.hpp  main_window.cpp  main_window.hpp  multi_editor.cpp  multi_editor.hpp  popup_text_input.hpp  post_window.cpp  post_window.hpp  project_tree.cpp  project_tree.hpp  session_switch_dialog.cpp  session_switch_dialog.hpp  sessions_dialog.hpp  tool_box.hpp
editors/sc-ide/widgets/code_editor/: CompletionMenuFactory.cpp  CompletionMenuFactory.hpp  autocompleter.cpp  autocompleter.hpp  completion_menu.cpp  completion_menu.hpp  editor.cpp  editor.hpp  highlighter.cpp  highlighter.hpp  line_indicator.cpp  overlay.cpp  sc_editor.cpp  sc_editor.hpp  tokens.hpp
editors/sc-ide/widgets/settings/: dialog.cpp  dialog.hpp  editor_page.cpp  editor_page.hpp  general_page.cpp  general_page.hpp  sclang_page.cpp  sclang_page.hpp  sclang_project_page.cpp  shortcuts_page.cpp  shortcuts_page.hpp
editors/sc-ide/widgets/style/: style.cpp  style.hpp
editors/sc-ide/widgets/util/: IDEWebChannelWrapper.hpp  WebSocketClientWrapper.hpp  WebSocketTransport.cpp  WebSocketTransport.hpp  color_widget.hpp  docklet.cpp  docklet.hpp  gui_utilities.cpp  gui_utilities.hpp  icon_list_widget.hpp  key_sequence_edit.hpp  multi_splitter.hpp  path_chooser_widget.hpp  popup_widget.cpp  popup_widget.hpp  status_box.cpp  status_box.hpp  text_format_list_widget.cpp  text_format_list_widget.hpp  volume_widget.cpp
editors/sced/: CMakeLists.txt
editors/sced/scedwin/: CMakeLists.txt
lang/: CMakeLists.txt
lang/Debugger/: Debugger.cpp  Debugger.h
lang/LangPrimSource/: OSCData.cpp  PyrArchiver.cpp  PyrArchiverT.h  PyrArrayPrimitives.cpp  PyrBitPrim.cpp  PyrCharPrim.cpp  PyrDeepCopier.h  PyrDeepFreezer.h  PyrFilePrim.cpp  PyrListPrim.cpp  PyrListPrim.h  PyrMathPrim.cpp  PyrMathPrim.h  PyrPlatformPrim.cpp  PyrPrimitive.cpp  PyrSched.cpp  PyrSerialPrim.cpp  PyrSignalPrim.cpp  PyrSignalPrim.h  PyrStringPrim.cpp  PyrSymbolPrim.cpp  PyrUnixPrim.cpp  ReadWriteMacros.h  SC_AlsaMIDI.cpp  SC_ComPort.cpp  SC_ComPort.h  SC_CoreAudioPrim.cpp  SC_CoreMIDI.cpp  SC_FIFO.h  SC_HID_api.cpp  SC_LID.cpp  SC_Msg.h  SC_PortMIDI.cpp
lang/LangSource/: AdvancingAllocPool.cpp  AdvancingAllocPool.h  ByteCodeArray.cpp  ByteCodeArray.h  DumpParseNode.cpp  GC.cpp  GC.h  HashTable.h  InitAlloc.cpp  InitAlloc.h  MiscInlineMath.h  Opcodes.h  PowerOfTwoAllocPool.h  PredefinedSymbols.h  PyrInterpreter.h  PyrInterpreter3.cpp  PyrKernel.h  PyrKernelProto.h  PyrLexer.cpp  PyrLexer.h  PyrMathOps.cpp  PyrMathSupport.cpp  PyrMessage.cpp  PyrMessage.h  PyrObject.cpp  PyrObject.h  PyrParseNode.cpp  PyrParseNode.h  PyrPrimitive.h  PyrSched.h  PyrSignal.cpp  PyrSignal.h  PyrSlot.h  PyrSlot32.h  PyrSlot64.h  PyrSymbol.h  PyrSymbolTable.cpp  PyrSymbolTable.h  SCBase.h  SC_LanguageClient.cpp  (+9 more)
lang/LangSource/Bison/: lang11d  lang11d.y  lang11d_tab.cpp  lang11d_tab.h  make_parser.sh
testsuite/server/: CMakeLists.txt
testsuite/server/scsynth/: CMakeLists.txt  scsynth_test.cpp  scsynth_test.hpp
testsuite/server/supernova/: CMakeLists.txt  audio_backend_test.cpp  audio_frontend_test.cpp  buffer_manager_test.cpp  callback_interpreter_system.cpp  memory-pool_test.cpp  perf_counter_test.cpp  sc_plugin_loader_test.cpp  sc_synth_prototype_test.cpp  sc_synthdef_test.cpp  server_dsp_thread_queue_test.cpp  server_dsp_thread_test.cpp  server_node_graph_test.cpp  server_sc_osc_handler_test.cpp  server_scheduler_test.cpp  server_synth_factory_test.cpp  server_test.cpp  simple_pool_test.cpp  sized_array_test.cpp  sndfile_backend_test.cpp  static_allocator_test.cpp  static_pool_test.cpp  test_synth.hpp  timetag_test.cpp  tl_allocator_test.cpp
(+340 files in other folders)
