if(SC_IDE)
    message(STATUS "Building the SuperCollider IDE")
    add_subdirectory(sc-ide)
endif()

if(SC_EL)
    message(STATUS "Building emacs editor support")
    add_subdirectory(sc-el)
endif()

if(SC_ED)
    if(NO_GPL3)
        message(WARNING "SC_ED requested, but NO_GPL3 flag is on, so not activated.")
    else()
        message(STATUS "Building gedit editor support")
        add_subdirectory(sced)
    endif()
endif()

if(SC_VIM)
    if(NO_GPL3)
        message(WARNING "SC_VIM requested, but NO_GPL3 flag is on, so not activated.")
    else()
        message(STATUS "Building vim editor support")
        add_subdirectory(scvim)
    endif()
endif()
